# rs-subscribe-auth

./: .gitignore  Cargo.toml  Dockerfile  README.md  pack.sh
.github/workflows/: github-actions.yml
src/: domain.rs  exception.rs  infrastructure.rs  lib.rs  main.rs
src/adapter/aws/: client.rs  config.rs  provider.rs
src/adapter/aws/client/: cognito_client.rs
src/application/auth/: auth_service.rs
src/controller/: auth_controller.rs
src/domain/: entity.rs  exception.rs
src/domain/entity/: auth_user.rs  token.rs
src/domain/exception/: auth_domain_exception.rs
src/domain/repository/: auth_repository.rs  cognito_repository.rs
src/exception/: application_exception.rs  auth_error.rs  auth_exception.rs
src/infrastructure/: cognito.rs
src/infrastructure/cognito/: cognito_repository.rs
src/middlewares/: logging_middleware.rs
src/module/: module.rs
src/modules/: module.rs
src/presentation/: dto.rs
src/presentation/controller/: auth_controller.rs
src/presentation/dto/: auth_request.rs  auth_result.rs  error_response.rs
src/setup/: mod.rs
