[package]
name = "rs-subscribe-auth"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.108"
tracing-subscriber = "0.3.18"
sqlx = { version = "0.8", features = [ "runtime-tokio", "tls-rustls", "postgres" ] }
dotenv = "0.15"
async-trait = "0.1.58"
password-hash = "0.5.0"
rand_core = "0.6.4"
pbkdf2 = { version = "0.12", features = ["simple"] }
jsonwebtoken = "9"
lambda_runtime = "0.9.0"
aws_lambda_events = "0.13.1"
lambda_http = "0.8.0"
ring = "=0.16.20"
http = "0.2"
anyhow = "1.0.78"

[target.x86_64-unknown-linux-gnu]
linker = "x86_64-unknown-linux-gnu-gcc"
ar = "x86_64-unknown-linux-gnu-ar"

[env]
CC_x86_64_unknown_linux_gnu = "x86_64-unknown-linux-gnu-gcc"
CXX_x86_64_unknown_linux_gnu = "x86_64-unknown-linux-gnu-g++"
AR_x86_64_unknown_linux_gnu = "x86_64-unknown-linux-gnu-ar"

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary