[package]
name = "rs-subscribe-auth"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.108"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
dotenv = "0.15"
async-trait = "0.1.58"
rand_core = "0.6.4"
jsonwebtoken = "9"
aws_lambda_events = "0.15.1"
http = "1.1.0"
anyhow = "1.0.78"
aws-config = "1.1.7"
aws-sdk-config = "1.41.0"
aws-sdk-cognitoidentityprovider = "1.46.0"
thiserror = "1.0"
env_logger = "0.11.5"
log = "0.4.17"
hmac = "0.12.1"
sha2 = "0.10.6"
base64 = "0.22.1"
mockall = "0.13.0"
regex = "1.10.6"

[dev-dependencies]
tower = "0.4.13"
http-body-util = "0.1.0"
rstest = "0.22.0"
axum-test = "15.7.1"
hyper = "0.14.30"

[target.x86_64-unknown-linux-gnu]
linker = "x86_64-unknown-linux-gnu-gcc"
ar = "x86_64-unknown-linux-gnu-ar"

[env]
CC_x86_64_unknown_linux_gnu = "x86_64-unknown-linux-gnu-gcc"
CXX_x86_64_unknown_linux_gnu = "x86_64-unknown-linux-gnu-g++"
AR_x86_64_unknown_linux_gnu = "x86_64-unknown-linux-gnu-ar"

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary

[profile.dev.package."*"]
opt-level = 3

[features]
default = ["coverage"]
coverage = []